# py-magickmind

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  back_uppyproject.toml  false.txt  main.py  pyproject.toml  pyrightconfig.json  server.py  setup.py  streamlit_app.py  test.txt
.github/workflows/: ci.yml
community/: community.py
docs/: APIDOG_DIVERGENCE.md  realtime_guide.md
docs/architecture/: backend_architecture.md  event_driven_patterns.md  realtime_patterns.md
docs/contributing/: README.md
docs/contributing/resource_implementation_guide/: README.md  models_v1_chat.py  models_v2_chat.py  resource_chat.py
docs/diagrams/: software_architecture.mdj
docs/guides/: advanced_usage.md  backend_integration.md  error_handling.md  persona.md
docs/resources/: artifact.md  corpus.md  end_user.md  mindspace.md  project.md
examples/: README.md  api_keys_example.py  artifact_example.py  authentication.py  backend_service.py  bulk_subscribe.py  caching_example.py  chat_example.py  chat_workflow.py  complete_chat_workflow.py  completions.py  corpus_example.py  corpus_ingest.py  email_password_auth.py  end_user_example.py  error_handling_patterns.py  fan_out_relay.py  history_example.py  mindspace_example.py  notification_pattern_example.py  persona_workflow.py  project_example.py  realtime_chat.py  resource_management.py  setup_resources.py  verify_imports.py
libs/: __init__.py  super_brain.py
libs/community/: __init__.py
libs/memories/: episodic_memory.py  sematic_memory.py
libs/super_brain/: __init__.py
libs/super_brain/reasoning/: mcts.py
magick_mind/: __init__.py  client.py  config.py  exceptions.py  magick_mind.py  main.py  routes.py  super_brain.py  types.py
magick_mind/auth/: __init__.py  base.py  email_password.py
magick_mind/brainoids/: __init__.py  available_brainoids.py
magick_mind/http/: __init__.py  client.py
magick_mind/memories/: __init__.py  topic_track.py
magick_mind/memories/episodic_memory/: episodic_memory.py  topic_track.py
magick_mind/memories/episodic_memory/dto/: episodic_memory_dto.py
magick_mind/memories/semantic_memory/: __init__.py  semantic_memory.py  sematic_memory.py  types.py
magick_mind/memories/semantic_memory/dto/: semantic_memory_dto.py
magick_mind/models/: __init__.py  auth.py  common.py  errors.py
magick_mind/models/v1/: __init__.py  api_keys.py  artifact.py  blueprint.py  chat.py  corpus.py  end_user.py  history.py  mindspace.py  model.py  persona.py  personality.py  project.py  runtime.py  trait.py
magick_mind/realtime/: __init__.py  client.py  events.py  handler.py
magick_mind/reasoning/: __init__.py  interfaces.py  mcts.py
magick_mind/reasoning/mini_gamma/: main.py
magick_mind/reasoning/singular/: main.py
magick_mind/reasoning/super_gamma/: constants.py  dto.py  functions.py  main.py  node.py
magick_mind/reasoning/super_master/: dto.py  functions.py  main.py  node.py
magick_mind/resources/: README.md  __init__.py  base.py
magick_mind/resources/v1/: __init__.py  api_keys.py  artifact.py  blueprint.py  chat.py  corpus.py  end_user.py  history.py  magickspaces.py  mindspace.py  model.py  persona.py  project.py  runtime.py  trait.py
magick_mind/utils/: __init__.py  chat_completion_request.py  helpers.py  response_format.py
magick_mind/utils/providers/: __init__.py  inference_provider.py
magick_mind/utils/providers/abstraction/: __init__.py  inference_abstract.py
magick_mind/utils/providers/inference/: __init__.py  constants.py
magick_mind/utils/providers/inference/dto/: __init__.py  message_dto.py
sematic_memory/company_knowledge/: kv_store_llm_response_cache.json
sematic_memory/core_knowledge/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_text_chunks.json  vdb_chunks.json
sematic_memory/domain_specific_knowledge/: kv_store_llm_response_cache.json
sematic_memory/personal_knowledge/: kv_store_llm_response_cache.json
specs/: openapi.dev.json  openapi.goctl.json  openapi.main.json  openapi.new.json  openapi.parsed.json
super_brain/: __init__.py
super_brain.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  conftest.py  factories.py  test_artifact_models.py  test_artifact_resource.py  test_auth.py  test_chat_models.py  test_chat_resource.py  test_client.py  test_corpus_ingest.py  test_end_user_models.py  test_end_user_resource.py  test_error_models.py  test_event_context.py  test_exceptions.py  test_history_models.py  test_history_resource.py  test_http_client.py  test_magick_mind.py  test_mindspace_models.py  test_mindspace_resource.py  test_openai_client.py  test_project_models.py  test_project_resource.py  test_query_response.py  test_realtime_complex.py  test_realtime_mock.py  test_resources.py
tests/contract/: AGENTS.md  README.md  __init__.py  api-actual.json  apidog-legacy.json  conftest.py  schema_registry.py  test_coverage.py  test_payloads.py  test_responses.py  utils.py
tests/integration/: README.md
tests/resources/: __init__.py  _payloads.py  test_artifact.py  test_blueprint.py  test_chat.py  test_corpus_query.py  test_end_user.py  test_history.py  test_mindspace.py  test_persona.py  test_project.py  test_runtime.py  test_trait.py
