[project]
name = "magick_mind"
version = "0.0.1"
authors = [
    { name = "Adrian", email = "minoak@globalmagicko.com" },
    { name = "Turtle", email = "turtle@globalmagicko.com" },
    { name = "Min Thu Wai", email = "minthu@globalmagicko.com" },
]
description = "SDK version to use Magick Mind AI service developed by Magick Mind Team."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "centrifuge-python>=0.4.2",
    "pytest-asyncio>=1.3.0",
]

[project.urls]
Homepage = "https://magickmind.ai"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "openapi-core>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["magick_mind"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "docs/",
    "examples/",
    "scripts/",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.8",
    "hypothesis-jsonschema>=0.23.1",
    "jsonschema>=4.25.1",
    "referencing>=0.36.2",
]

[tool.pytest.ini_options]
markers = [
    "contract: marks tests as contract tests (validates SDK against OpenAPI spec)",
    "slow: marks tests as slow (property-based fuzz tests)",
]

