[project]
name = "magickmind"
version = "0.2.2"
authors = [
  { name = "Adrian", email = "adrian@magickmind.ai" },
  { name = "Minnie", email = "minnie@magickmind.ai" },
  { name = "Turtle", email = "turtle@magickmind.ai" },
]
description = "Official Python SDK for the MagickMind AI platform."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["magickmind", "ai", "sdk", "api", "client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "centrifuge-python>=0.4.2",
  "python-dotenv>=1.2.1",
  "jwt>=1.4.0",
]

[project.urls]
Homepage = "https://magickmind.ai/"
Documentation = "https://docs.magickmind.ai/"
Repository = "https://github.com/General-Magick-Industries/py-magickmind"
Issues = "https://github.com/General-Magick-Industries/py-magickmind/issues"
Changelog = "https://github.com/General-Magick-Industries/py-magickmind/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
  "pytest-httpx>=0.35.0",
  "openapi-core>=0.19.0",
]
openai = ["openai>=1.12.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["magick_mind"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/", "docs/", "examples/", "scripts/"]

[dependency-groups]
dev = [
  "hypothesis>=6.148.8",
  "hypothesis-jsonschema>=0.23.1",
  "jsonschema>=4.25.1",
  "referencing>=0.36.2",
  "pytest-httpx>=0.35.0",
  "polyfactory>=2.18.0",
  "time-machine>=2.16.0",
  "dirty-equals>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "contract: marks tests as contract tests (validates SDK against OpenAPI spec)",
  "slow: marks tests as slow (property-based fuzz tests)",
]
